force-app/main/default/objects/CTRShareholder__c.object
<CustomObject>
    <fields>
        <fullName>CTRRequestFormHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTR Request Form Header</label>
        <referenceTo>CTRRequestFormHeader__c</referenceTo>
        <relationshipLabel>CTR Shareholder</relationshipLabel>
        <relationshipName>CTRShareholder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CTR_ShareHolder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Shareholder__c</fullName>
        <inlineHelpText>who hold an interest in the company more than 10%</inlineHelpText>
        <label>% of Shareholder</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>CTR Shareholder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CTRShareHolder Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>